--- a/settings.css
+++ b/settings.css
@@ -1,3 +1,15 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+@media(min-width:375px) {
+    label,
+    .contain{
+        font-size: larger
+    }
+}
 .container{
     display: flex;
     justify-content: center;
@@ -5,14 +17,14 @@
 .contain{
     margin-top: 10vh;
     border: 2px solid;
-    border-radius: 8px;
-    width:40%;
+    border-radius: 10px;
+    width:50%;
     height:100%;
     padding: 4%;
     background-color: white;
     box-shadow: 2px 2px 6px;
 }
-h2 {
+h3 {
     font-family: 'Arial';
     padding:10px;
     border: 4px solid;
